[package]
name = "argonctl"
authors = ["Artur Kaleta <akaleta@protonmail.com>"]
version = "0.1.0"
edition = "2024"

[profile.dev]
#debug = 1
opt-level = 1
#lto = "thin"

[profile.release]
lto = "fat"
opt-level = 3
strip = "debuginfo"
#panic = "abort"

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
debug-assertions = false
overflow-checks = false


[dependencies]
smol = "2"
clap = { version = "4", features = ["derive"] }
log = { version = "0", features = ["release_max_level_info", "max_level_debug"] }
env_logger = "0"
zbus = { version = "5", features = ["time"] }
i2cdev = "0"
nix = "0"
ctrlc = { version = "3", features = ["termination"] }
daemonize = "0"